--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/mongoose": "^5.11.97",
+    "aws-sdk": "^2.1419.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.4",
     "uuidv4": "^6.2.13"
   },
@@ -23,6 +24,10 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/nodemailer": "^6.4.8",
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongoose": "^5.11.97",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
