--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/nodemailer": "^6.4.8",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
+    "@types/nodemailer": "^6.4.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
