--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "uuidv4": "^6.2.13"
   },
   "scripts": {
-    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts"
+    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -32,6 +33,8 @@
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^3.0.0",
     "@types/nodemailer": "^6.4.8",
+    "jest": "^29.6.1",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
