--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "18.16.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.374.0",
     "aws-sdk": "^2.1419.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
